--- a/style.css
+++ b/style.css
@@ -1,5 +1,14 @@
 @import url(http://fonts.googleapis.com/css?family=Raleway);
 
+
+h1{
+background-color:#343652;
+color: whitesmoke;
+padding: 30px 35px;
+margin: -10px -50px;
+text-align:center;
+border-radius: 10px 10px 0 0;
+}
 h2{
 background-color: #FEFFED;
 padding: 30px 35px;
@@ -27,8 +36,9 @@ border-radius: 10px;
 font-family: raleway;
 float:left;
 margin-top:50px;
+background-color: whitesmoke;
 }
-input[type=text],input[type=password]{
+input[type=text]{
 width: 100%;
 height: 40px;
 padding: 5px;
@@ -74,6 +84,6 @@ border-radius: 5px;
 padding: 10px 0;
 outline:none;
 }
-input[type=button]:hover{
+input[type=submit]:hover{
 background: linear-gradient(#ffdd7f 5%, #ffbc00 100%);
 }
