--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 @import url(http://fonts.googleapis.com/css?family=Raleway);
 
-
+body{
+    background:url(Christmas\ Background.jpg) no-repeat center center fixed;
+}
+@media only screen and (min-width:320px) and (max-width:480px){
+    background:url(Background.jpg) no-repeat center center fixed;
+}
 h1{
 background-color:#343652;
 color: whitesmoke;
