--- a/style.css
+++ b/style.css
@@ -3,8 +3,10 @@
 body{
     background:url(Christmas\ Background.jpg) no-repeat center center fixed;
 }
-@media only screen and (min-width:320px) and (max-width:480px){
-    background:url(Background.jpg) no-repeat center center fixed;
+@media (min-width:320px) and (max-width:480px){
+    body{
+        background:url(Background.jpg) no-repeat center center fixed;
+    }
 }
 h1{
 background-color:#343652;
