--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 body{
     background:url(Christmas\ Background.jpg) no-repeat center center fixed;
 }
-@media (min-width:320px) and (max-width:480px){
+@media only screen and (min-width:320px) and (max-width:480px){
     body{
         background:url(Background.jpg) no-repeat center center fixed;
     }
