--- a/style.css
+++ b/style.css
@@ -3,9 +3,9 @@
 body{
     background:url(Christmas\ Background.jpg) no-repeat center center fixed;
 }
-@media only screen and (min-width:320px) and (max-width:480px){
+@media only screen and (max-width:600px){
     body{
-        background:url(Background.jpg) no-repeat center center fixed;
+        background:url(Background\ Mobile.jpg) no-repeat center center fixed;
     }
 }
 h1{
