--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 body{
     background:url(Christmas\ Background.jpg) no-repeat center center fixed;
 }
-@media only screen and (max-width:600px){
+@media only screen and (orientation: portrait){
     body{
         background:url(Background\ Mobile.jpg) no-repeat center center fixed;
     }
