--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@ body{
 }
 @media only screen and (orientation: portrait){
     body{
-        background:url(Background\ Mobile.jpg) no-repeat center center fixed;
+        background:url(Background\ Mobile.jpg) no-repeat;
+        background-size: cover;
     }
 }
 h1{
