--- a/style.css
+++ b/style.css
@@ -30,6 +30,8 @@ padding: 30px 35px;
 margin: -10px -50px;
 text-align:center;
 border-radius: 10px 10px 0 0;
+font-weight:lighter;
+font-size:30px;
 font-family:'Agency FB'
 }
 hr{
@@ -53,7 +55,7 @@ float:left;
 margin-left:25%;
 margin-top:25%;
 background-color: whitesmoke;
-font-size:18px;
+font-size:20px;
 font-family:'Agency FB';
 }
 input[type=text]{
@@ -64,14 +66,14 @@ margin-bottom: 25px;
 margin-top: 5px;
 border: 2px solid #ccc;
 color: #4f4f4f;
-font-size: 18px;
+font-size: 20px;
 border-radius: 5px;
 font-family: 'Agency FB';
 }
 label{
 color: #464646;
 text-shadow: 0 1px 0 #fff;
-font-size: 14px;
+font-size: 18px;
 font-weight: bold;
 }
 center{
@@ -86,7 +88,7 @@ border-radius: 2px;
 color: black;
 }
 input[type=submit]{
-font-size: 20px;
+font-size: 22px;
 font-family: 'Agency FB';
 background: linear-gradient(#ffbc00 5%, #ffdd7f 100%);
 border: 1px solid #e5a900;
