--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ padding: 30px 35px;
 margin: -10px -50px;
 text-align:center;
 border-radius: 10px 10px 0 0;
-font-weight:lighter;
+font-weight:bolder;
 font-size:30px;
 font-family:'Agency FB'
 }
