--- a/style.css
+++ b/style.css
@@ -9,11 +9,11 @@ src:url("fonts/Alisandra\ Demo.ttf");
 }
 
 body{
-    background:url(Images/Christmas\ Background.jpg) no-repeat center center fixed;
+    background:url(Images/Leuchtturm.jpg) no-repeat center center fixed;
 }
 @media only screen and (orientation: portrait){
     body{
-        background:url(Images/Background\ Mobile.jpg) no-repeat;
+        background:url(Images/Leuchtturm.jpg) no-repeat;
         background-size: cover;
     }
 }
